--- a/views/base.pug
+++ b/views/base.pug
@@ -6,6 +6,7 @@ html
       meta(name='viewport' content='width=device-width, initial-scale=1.0')
       link(rel='stylesheet' href='/css/style.css')
       link(rel='stylesheet' href='/css/table.css')
+      link(rel='stylesheet' href='/css/review.css')
       link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
       title TourGuide | #{title}
