--- a/views/_reviewCard.pug
+++ b/views/_reviewCard.pug
@@ -4,6 +4,7 @@ mixin reviewCard(review)
             img.reviews__avatar-img(src=`/img/users/${review.user.photo}`, alt=`review.user.name`)
             h6.reviews__user= review.user.name
         p.reviews__text= review.review
+        p.reviews__text #{review.user.name.split(" ")[0]} rated us with a #{review.rating}/5
         .reviews__rating
             each star in [1, 2, 3, 4, 5]
                 svg.reviews__star(class=`reviews__star--${review.rating >= star ? 'active' : 'inactive'}`)
